[package]
name = "iq-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
hex = "0.4"
log = { workspace = true }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
jetstreamer = { path = ".." }
jetstreamer-plugin = { path = "../jetstreamer-plugin" }
jetstreamer-firehose = { path = "../jetstreamer-firehose" }
clickhouse = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
solana-message = { version = "3" }
solana-pubkey = { version = "3" }
dotenvy = "0.15"
